Eliminate landing image on mobile due to ios safari issues

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,10 +7,11 @@
 }
 
 .landing-image {
-  margin: 0;
+  display: none;
+  /* margin: 0;
   height: 100vh;
   background-position: right bottom;
-  background-attachment: scroll;
+  background-attachment: scroll; */
   
 }
 /* CSS specific to iOS devices */ 
